Add HTML structure and JavaScript for news ticker

--- a/led_ticker_pro.html
+++ b/led_ticker_pro.html
@@ -1,1 +1,163 @@
-# newswidget
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<style>
+body {
+  margin: 0;
+  background: transparent;
+  overflow: hidden;
+}
+
+.ticker-wrap {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background: rgba(0,0,0,0.9);
+  border-top: 4px solid #ff6600;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.ticker {
+  display: inline-block;
+  white-space: nowrap;
+  padding-left: 100%;
+  animation: ticker 40s linear infinite, glow 1.2s infinite alternate;
+  font-size: 30px;
+  font-family: "Courier New", monospace;
+  color: #ff8800;
+  text-shadow:
+    0 0 5px #ff6600,
+    0 0 10px #ff6600,
+    0 0 20px #ff3300,
+    0 0 40px #ff2200;
+}
+
+/* 横スクロール */
+@keyframes ticker {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-100%); }
+}
+
+/* 発光揺らぎ */
+@keyframes glow {
+  from { text-shadow:
+    0 0 5px #ff6600,
+    0 0 15px #ff6600,
+    0 0 30px #ff3300; }
+  to { text-shadow:
+    0 0 10px #ffaa00,
+    0 0 25px #ff6600,
+    0 0 45px #ff3300; }
+}
+
+/* カテゴリ別色 */
+.news-politics { color: #ff6600; text-shadow:0 0 5px #ff6600,0 0 10px #ff6600; }
+.news-entertainment { color: #ffaa66; text-shadow:0 0 5px #ffaa66,0 0 10px #ffaa66; }
+.news-other { color: #ff8800; text-shadow:0 0 5px #ff8800,0 0 10px #ff8800; }
+</style>
+</head>
+<body>
+
+<div class="ticker-wrap">
+  <div class="ticker" id="tickerText">
+    データ取得中...
+  </div>
+</div>
+
+<script>
+
+// ===== ニュースRSS =====
+const NEWS_URL = "https://api.rss2json.com/v1/api.json?rss_url=https://news.yahoo.co.jp/rss/topics/top-picks.xml";
+
+// ===== Alpha Vantage APIキー =====
+const STOCK_API_KEY = "IK11DTVQXPQNPZJ1";
+
+// ===== 前回取得ニュース保存 =====
+let lastNews = "ニュース取得中...";
+
+// ===== 前回株価保存 =====
+let lastNikkei = null;
+let lastUSDJPY = null;
+
+// ===== ニュース取得（フォールバック＋カテゴリ色分け） =====
+async function fetchNews() {
+  try {
+    const res = await fetch(NEWS_URL);
+    const data = await res.json();
+    if(data.status === "ok" && data.items.length > 0){
+      lastNews = data.items.slice(0,6).map(item => {
+        // 簡易カテゴリ判定
+        let cls = 'news-other';
+        const title = item.title;
+        if(/経済|政治|政府|内閣/.test(title)) cls='news-politics';
+        else if(/芸能|映画|ドラマ|音楽/.test(title)) cls='news-entertainment';
+        return `<span class="${cls}">${title}</span>`;
+      }).join(" ｜ ");
+    }
+  } catch {
+    // 取得失敗時は lastNews を使用
+  }
+  return lastNews;
+}
+
+// ===== 日経平均取得（上昇下降▲▼表示） =====
+async function fetchNikkei() {
+  try {
+    const res = await fetch(
+      `https://www.alphavantage.co/query?function=GLOBAL_QUOTE&symbol=^N225&apikey=${STOCK_API_KEY}`
+    );
+    const data = await res.json();
+    const price = parseFloat(data["Global Quote"]["05. price"]);
+    let symbol = '';
+    if(lastNikkei !== null){
+      symbol = price > lastNikkei ? '▲' : (price < lastNikkei ? '▼' : '');
+    }
+    lastNikkei = price;
+    return `【日経平均】${price}円 ${symbol}`;
+  } catch {
+    return "日経取得エラー";
+  }
+}
+
+// ===== ドル円取得（上昇下降▲▼表示） =====
+async function fetchUSDJPY() {
+  try {
+    const res = await fetch(
+      `https://www.alphavantage.co/query?function=CURRENCY_EXCHANGE_RATE&from_currency=USD&to_currency=JPY&apikey=${STOCK_API_KEY}`
+    );
+    const data = await res.json();
+    const rate = parseFloat(data["Realtime Currency Exchange Rate"]["5. Exchange Rate"]);
+    let symbol = '';
+    if(lastUSDJPY !== null){
+      symbol = rate > lastUSDJPY ? '▲' : (rate < lastUSDJPY ? '▼' : '');
+    }
+    lastUSDJPY = rate;
+    return `【ドル円】${rate.toFixed(2)} ${symbol}`;
+  } catch {
+    return "為替取得エラー";
+  }
+}
+
+// ===== Ticker更新 =====
+async function updateTicker() {
+  const news = await fetchNews();
+  const nikkei = await fetchNikkei();
+  const usd = await fetchUSDJPY();
+
+  const text = `${nikkei} ｜ ${usd} ｜ ${news} ｜ `;
+  document.getElementById("tickerText").innerHTML = text;
+}
+
+// 初回表示＆30秒ごと更新
+updateTicker();
+setInterval(updateTicker, 30000);
+
+</script>
+
+</body>
+</html>
+
