Change news API URL and update news fetching logic
Updated NEWS_URL to use All Origins for CORS support and modified fetchNews function to parse XML response.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ body {
 <script>
 
 // ===== ニュースRSS =====
-const NEWS_URL = "https://api.rss2json.com/v1/api.json?rss_url=https://news.yahoo.co.jp/rss/topics/top-picks.xml";
+const NEWS_URL = "https://api.allorigins.win/get?url=" + encodeURIComponent("https://news.yahoo.co.jp/rss/topics/top-picks.xml");
+
 
 // ===== Alpha Vantage APIキー =====
 const STOCK_API_KEY = "IK11DTVQXPQNPZJ1";
@@ -86,10 +87,13 @@ let lastUSDJPY = null;
 // ===== ニュース取得（フォールバック＋カテゴリ色分け） =====
 async function fetchNews() {
   try {
-    const res = await fetch(NEWS_URL);
-    const data = await res.json();
-    if(data.status === "ok" && data.items.length > 0){
-      lastNews = data.items.slice(0,6).map(item => {
+   const res = await fetch(NEWS_URL);
+const data = await res.json();
+const parser = new DOMParser();
+const xml = parser.parseFromString(data.contents, "text/xml");
+const items = xml.querySelectorAll("item");
+lastNews = Array.from(items).slice(0,6).map(item => item.querySelector("title").textContent).join(" ｜ ");
+
         // 簡易カテゴリ判定
         let cls = 'news-other';
         const title = item.title;
