Update STOCK_API_KEY in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ animation: ticker 100s linear infinite, glow 1.2s infinite alternate;
 <script>
 
 // ===== APIキー（あなたのキーを入れる）=====
-const STOCK_API_KEY = "あなたのAlphaVantageキー";
+const STOCK_API_KEY = "IK11DTVQXPQNPZJ1";
 
 // ===== 前回保存用 =====
 let lastNews = "ニュース取得中...";
