--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
   display: inline-block;
   white-space: nowrap;
   padding-left: 100%;
-animation: ticker 100s linear infinite, glow 1.2s infinite alternate;
+  animation: ticker 100s linear infinite, glow 1.2s infinite alternate;
   font-size: 30px;
   font-family: "Courier New", monospace;
   color: #ff8800;
@@ -61,13 +61,15 @@ animation: ticker 100s linear infinite, glow 1.2s infinite alternate;
 
 <script>
 
-// ===== APIキー（あなたのキーを入れる）=====
-const STOCK_API_KEY = "IK11DTVQXPQNPZJ1";
+// ===== APIキー =====
+const STOCK_API_KEY = "あなたのAlphaVantageキー";
 
-// ===== 前回保存用 =====
+// ===== キャッシュ保存 =====
 let lastNews = "ニュース取得中...";
 let lastNikkei = null;
 let lastUSDJPY = null;
+let cachedNikkei = "日経取得中...";
+let cachedUSD = "為替取得中...";
 
 // ===== ニュース取得（CORS回避）=====
 async function fetchNews() {
@@ -88,15 +90,14 @@ async function fetchNews() {
       .map(item => item.querySelector("title").textContent)
       .join(" ｜ ");
 
-  } catch (error) {
-    console.error("ニュース取得エラー:", error);
+  } catch {
     lastNews = "ニュース取得エラー";
   }
 
   return lastNews;
 }
 
-// ===== 日経平均取得（▲▼表示）=====
+// ===== 日経ETF取得（EWJ使用・▲▼表示）=====
 async function fetchNikkei() {
   try {
     const res = await fetch(
@@ -109,7 +110,7 @@ async function fetchNikkei() {
     const data = JSON.parse(proxyData.contents);
 
     const price = parseFloat(data["Global Quote"]["05. price"]);
-    if (!price) throw new Error("価格取得失敗");
+    if (!price) throw new Error();
 
     let symbol = "";
     if (lastNikkei !== null) {
@@ -120,7 +121,7 @@ async function fetchNikkei() {
     return `【日経ETF】${price.toFixed(2)} ${symbol}`;
 
   } catch {
-    return "日経取得エラー";
+    return cachedNikkei; // 失敗時は前回値維持
   }
 }
 
@@ -137,7 +138,7 @@ async function fetchUSDJPY() {
     const data = JSON.parse(proxyData.contents);
 
     const rate = parseFloat(data["Realtime Currency Exchange Rate"]["5. Exchange Rate"]);
-    if (!rate) throw new Error("為替取得失敗");
+    if (!rate) throw new Error();
 
     let symbol = "";
     if (lastUSDJPY !== null) {
@@ -148,25 +149,32 @@ async function fetchUSDJPY() {
     return `【ドル円】${rate.toFixed(2)} ${symbol}`;
 
   } catch {
-    return "為替取得エラー";
+    return cachedUSD; // 失敗時は前回値維持
   }
 }
 
-// ===== Ticker更新 =====
+// ===== 株価まとめ更新（5分ごと）=====
+async function updateStocks() {
+  cachedNikkei = await fetchNikkei();
+  cachedUSD = await fetchUSDJPY();
+}
+
+// ===== Ticker更新（1分ごと）=====
 async function updateTicker() {
   const news = await fetchNews();
-  const nikkei = await fetchNikkei();
-  const usd = await fetchUSDJPY();
-
-  const text = `${nikkei} ｜ ${usd} ｜ ${news} ｜ `;
+  const text = `${cachedNikkei} ｜ ${cachedUSD} ｜ ${news} ｜ `;
   document.getElementById("tickerText").innerHTML = text;
 }
 
-// 初回実行
+// ===== 初回実行 =====
+updateStocks();
 updateTicker();
 
-// 60秒ごと更新（API制限対策）
+// ニュース60秒ごと
 setInterval(updateTicker, 60000);
+
+// 株価5分ごと（API安定対策）
+setInterval(updateStocks, 300000);
 
 </script>
 
