Update STOCK_API_KEY in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 <script>
 
 // ===== APIキー =====
-const STOCK_API_KEY = "あなたのAlphaVantageキー";
+const STOCK_API_KEY = "IK11DTVQXPQNPZJ1";
 
 // ===== キャッシュ保存 =====
 let lastNews = "ニュース取得中...";
