--- a/index.html
+++ b/index.html
@@ -100,19 +100,17 @@ let lastNews = "";
 
 async function fetchNews() {
   try {
-    const rssUrl = "https://news.yahoo.co.jp/rss/topics/top-picks.xml";
-    const proxyUrl = "https://api.allorigins.win/get?url=" + encodeURIComponent(rssUrl);
+    const url = "https://api.rss2json.com/v1/api.json?rss_url=" +
+      encodeURIComponent("https://news.yahoo.co.jp/rss/topics/top-picks.xml");
 
-    const res = await fetch(proxyUrl);
+    const res = await fetch(url);
     const data = await res.json();
 
-    const parser = new DOMParser();
-    const xml = parser.parseFromString(data.contents, "text/xml");
-    const items = xml.querySelectorAll("item");
+    if (!data.items) return lastNews;
 
-    const headlines = Array.from(items)
+    const headlines = data.items
       .slice(0, 6)
-      .map(item => item.querySelector("title").textContent);
+      .map(item => item.title);
 
     return headlines.join(" ｜ ");
 
