--- a/index.html
+++ b/index.html
@@ -17,33 +17,29 @@ body {
   width: 100%;
   height: 75px;
   display: flex;
-  align-items: center;
   background: #1a1a1a;
   border-top: 5px solid #ff6600;
-  overflow: hidden;
 }
 
-/* ===== 左固定ラベル ===== */
+/* ===== 左ラベル（固定領域） ===== */
 .news-label {
-  width: 180px;              /* 固定幅で崩れ防止 */
-  min-width: 180px;
+  width: 140px;
+  min-width: 140px;
   display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(135deg, #ff6600, #ff3300);
-  color: #fff;
-  font-weight: bold;
-  font-size: 22px;
-  letter-spacing: 2px;
-  white-space: nowrap;       /* 縦化防止 */
 }
 
+/* LIVE表示のみ */
 .live {
-  margin-left: 10px;
-  font-size: 14px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  letter-spacing: 2px;
   background: #c40000;
-  padding: 4px 8px;
-  border-radius: 3px;
+  padding: 6px 12px;
+  border-radius: 4px;
   animation: blink 1.5s infinite;
 }
 
@@ -52,19 +48,26 @@ body {
   50% { opacity: 0.4; }
 }
 
+/* ===== スクロール領域（完全分離） ===== */
+.ticker-container {
+  flex: 1;
+  overflow: hidden; /* ←ここ重要 */
+  display: flex;
+  align-items: center;
+}
+
 /* ===== ニューステキスト ===== */
 .news-ticker {
-  flex: 1;
   white-space: nowrap;
-  padding-left: 100%;
   font-size: 28px;
   color: #ffffff;
   animation: scroll 90s linear infinite;
 }
 
+/* スクロール */
 @keyframes scroll {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-100%); }
+  from { transform: translateX(100%); }
+  to { transform: translateX(-100%); }
 }
 
 /* 重要ワード */
@@ -78,10 +81,13 @@ body {
 
 <div class="news-bar">
   <div class="news-label">
-    今話題 <span class="live">LIVE</span>
+    <div class="live">LIVE</div>
   </div>
-  <div class="news-ticker" id="tickerText">
-    ニュース取得中...
+
+  <div class="ticker-container">
+    <div class="news-ticker" id="tickerText">
+      ニュース取得中...
+    </div>
   </div>
 </div>
 
@@ -89,7 +95,7 @@ body {
 
 let lastNews = "";
 
-/* ===== 安定取得（get方式） ===== */
+/* ===== ニュース取得（安定版） ===== */
 async function fetchNews() {
   try {
     const rssUrl = "https://news.yahoo.co.jp/rss/topics/top-picks.xml";
@@ -143,5 +149,3 @@ setInterval(updateTicker, 30000);
 
 </body>
 </html>
-
-
