--- a/index.html
+++ b/index.html
@@ -100,15 +100,16 @@ let lastNews = "";
 async function fetchNews() {
   try {
     const rssUrl = "https://news.yahoo.co.jp/rss/topics/top-picks.xml";
-    const proxyUrl =
-      "https://api.allorigins.win/get?url=" +
-      encodeURIComponent(rssUrl);
+ const proxyUrl =
+  "https://corsproxy.io/?" +
+  encodeURIComponent(rssUrl);
 
-    const res = await fetch(proxyUrl);
-    const data = await res.json();
+const res = await fetch(proxyUrl);
+const text = await res.text();
 
-    const parser = new DOMParser();
-    const xml = parser.parseFromString(data.contents, "text/xml");
+const parser = new DOMParser();
+const xml = parser.parseFromString(text, "text/xml");
+
     const items = xml.querySelectorAll("item");
 
     const headlines = Array.from(items)
